--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "MichRad",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "express": "^4.18.1",
