--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.4",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuidv4": "^6.2.13"
   },
   "scripts": {
     "start": "BROWSER=NONE react-scripts start",
